testsuite/tests/safeHaskell/safeInfered/UnsafeInfered02.stderr
UnsafeInfered02.hs:4:1: error:
    UnsafeInfered02_A: Can't be safely imported!
    The module itself isn't safe.
