testsuite/tests/safeHaskell/safeInfered/UnsafeInfered02.hs
{-# LANGUAGE Safe #-}
module UnsafeInfered02 where

import safe UnsafeInfered02_A

g :: Int
g = f

